# jaxsce

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_optimization.py
data/Ar/aug-cc-pVQZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/Be/aug-cc-pVQZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/Ca/jorge-qzp/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/He/aug-cc-pVQZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/He/cc-pVDZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/Kr/aug-cc-pVQZ/: chkfile.chk
data/Kr/cc-pVQZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/Mg/aug-cc-pVQZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/Ne/aug-cc-pVQZ/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/Xe/jorge-aqzp/: 1025.json  1025.npz  1025_integrals.json  chkfile.chk
data/bohr_atom/10/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/18/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/2/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/28/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/36/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/4/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/46/: 1025.json  1025.npz  1025_integrals.json
data/bohr_atom/60/: 1025.json  1025.npz  1025_integrals.json
data/sqrt_r/10/: 1024.json  1024.npz  1025.json  1025.npz  1025_integrals.json
data/sqrt_r/14/: 1025.json  1025.npz  1025_integrals.json
data/sqrt_r/16/: 1025.json  1025.npz  1025_integrals.json
data/sqrt_r/18/: 1025.json  1025.npz  1025_integrals.json
jaxsce/: constants.py  coordinates_3d.py  integrate.py  optimize.py  plotting.py
jaxsce/densities/: __init__.py  bohr_atom.py  classes.py  pyscf.py  sqrt_r.py  test.py
tests/: test.ipynb  test_densities.py
(+45 files in other folders)
